--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,70 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Bootstrap SCSS file. */
+@import "bootstrap/scss/bootstrap";
+
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Roboto&display=swap");
+
+:root {
+  --primary-color: #026467;
+  --secondary-color: #e5f5ea;
+  --body-text-color: #596392;
+  --navbar-footer-color: #f9f9f9;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  font-size: 12px;
+  color: var(--body-text-color);
+}
+
+.site-logo {
+  padding: 5px 20px;
+  border-radius: 20px;
+  background: var(--secondary-color);
+  color: var(--primary-color);
+}
+
+.nav-link {
+  color: var(--primary-color);
+}
+
+.shadow-effect {
+  border: none;
+  box-shadow: 0 0 33px -10px rgba(71, 114, 254, 0.3);
+}
+
+.bg-theme {
+  background: var(--primary-color);
+}
+
+.bg-secondary-theme {
+  background: var(--secondary-color);
+}
+
+.text-theme-primary {
+  color: var(--primary-color);
+}
+
+input {
+  &[type="text"],
+  &[type="email"] {
+    height: 60px;
+    padding-left: 20px;
+    font-size: 13px;
+  }
+}
+
+.btn-theme {
+  height: 50px;
+  border: none;
+  font-size: 13px;
+  background: var(--primary-color);
+  color: white;
+}
+.btn-block {
+  height: 50px;
+  font-size: 15px;
+  background: var(--primary-color);
+  color: var(--secondary-color);
+}
